# sagrada

./: .gitignore  CLAUDE.md  README.md
api/: API-REFERENCE.md  CLAUDE.md  DEPLOYMENT.md  README.md  package-lock.json  package.json
api/deploy/: nginx-sagrada.conf  sagrada-api.service
api/src/: index.ts
config/: .env.example  ble-bridge.yaml  config-cathedral.yaml  config-sagrada.yaml  mqtt-logger.yaml  network-monitor.yaml
deploy/: install.sh
public/: index.html
scripts/: run_aggregator.py  run_ble_bridge.py  run_collector.py  run_controller.py  run_display.py  run_mqtt_logger.py  run_network_monitor.py
services/: CLAUDE.md  pyproject.toml  setup.py
services/sagrada/: __init__.py
services/sagrada/aggregator/: __init__.py  aggregator.py
services/sagrada/ble_bridge/: __init__.py  ble_manager.py  bridge_service.py  config.py  mqtt_publisher.py
services/sagrada/collector/: __init__.py  collector.py
services/sagrada/collector/config/: __init__.py  settings.py
services/sagrada/collector/readers/: __init__.py  base.py  ble.py  dummy.py  kasa.py  mysql.py  onewire.py  smartplug.py
services/sagrada/controller/: __init__.py  controller.py
services/sagrada/display/: __init__.py  data_fetcher.py  terminal_monitor.py
services/sagrada/mqtt_logger/: __init__.py  config.py  logger_service.py
services/sagrada/network_monitor/: __init__.py  config.py  monitor.py
services/sagrada/shared/: __init__.py  config.py  database.py  disk_check.py  logging.py  models.py  mqtt.py
web/: CLAUDE.md  package-lock.json  package.json  webpack.config.js
(+56 files in other folders)
